# Qt-Library-Management-System

./: .gitignore  CMakeLists.txt  Readme.md  const.h  main.cpp  resource.qrc
database_manager/: CDataBaseManager.cpp  CDataBaseManager.h  CMakeLists.txt  my_library.db  test.cpp
login_dialog/: CLoginDialog.cpp  CLoginDialog.h  CLoginDialog.ui  CMakeLists.txt  CRegisterDialog.cpp  CRegisterDialog.h  CRegisterDialog.ui
main_window/: CBookWidget.cpp  CBookWidget.h  CBookWidget.ui  CBorrowDialog.cpp  CBorrowDialog.h  CBorrowDialog.ui  CBorrowWidget.cpp  CBorrowWidget.h  CBorrowWidget.ui  CMainWindow.cpp  CMainWindow.h  CMainWindow.ui  CMakeLists.txt  CUserWidget.cpp  CUserWidget.h  CUserWidget.ui
style/: login_dialog.qss  main_window.qss
